kustomize/overlays/beta/mrfylke-no/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-core-consumer-utdanning-larling
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`beta.felleskomponent.no`) && PathPrefix(`/utdanning/larling`) && Headers(`x-org-id`, `mrfylke.no`)"
      kind: Rule
      services:
        - name: fint-core-consumer-utdanning-larling
          port: 8080
